...
    <string name="title_activity_tournament_list">TournamentList</string>
    <string name="title_activity_tournament_details">TournamentDetailsActivity</string>
    <string name="title_activity_tournament_play">TournamentPlayActivity</string>
    <string name="action_settings">Settings</string>
    
    <!-- NAV: drawer -->
    <string name="drawer_nav_home">Home</string>
    <string name="drawer_nav_online_tournaments">Online Tournaments</string>
    <string name="drawer_nav_players">Players</string>
    <string name="drawer_nav_organized_tournaments">Organize Tournament</string>

    <string name="drawer_nav_account">Account</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- NAV: Tournament Management -->
    <string name="heading_online_tournaments">Online Tournaments</string>
    <string name="heading_organized_tournaments">Your Tournaments</string>
...
    
    <!-- result entering dialog -->
    <string name="result">confirm</string>
    <string name="result_pairing_title">RESULT</string>
    <string name="heading_ranking_for_round">Ranking</string>

    <string name="title_tournament_management">Tournament Management</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="user_name">anonymous</string>

    <!-- about-->
    <string name="material_design_icons_id" translatable="false">material-design-icons</string>
...
    <string name="dropped_in_round">Dropped in round %1$d</string>
    <string name="table_number">Table %1$d</string>
    <string name="tournament_started">Ongoing</string>
    <string name="tournament_finished">Finished</string>
    <string name="final_standings">Final Standings</string>
  
    <string name="title_player_management">Online Players</string>
    <string name="title_home">Home</string>
    <string name="no_online_players">No Player found</string>

    <string name="title_account_management">Account Management</string>
    <string name="welcome_text">Welcome, %1$s!</string>
    <string name="please_sign_in_text">Please sign in to manage your account</string>
    <string name="introduction_text">
        OpenTournament uses your email address to identify you.\nYou are able to watch and create tournaments without being noticed as a tournamentPlayer.\nNevertheless we recommend to register yourself as a tournamentPlayer for easily being included in tournaments you are visiting.
    </string>
    <string name="be_a_player">Add me as a tournamentPlayer</string>
...
